content/develop/ai/redisvl/0.22.0/api/query.md
---
linkTitle: Query
title: Query
url: '/develop/ai/redisvl/0.22.0/api/query/'
---


Query classes in RedisVL provide a structured way to define simple or complex
queries for different use cases. Each query class wraps the `redis-py` Query module
[https://github.com/redis/redis-py/blob/master/redis/commands/search/query.py](https://github.com/redis/redis-py/blob/master/redis/commands/search/query.py) with extended functionality for ease-of-use.

## VectorQuery

### `class VectorQuery(vector, vector_field_name, return_fields=None, filter_expression=None, dtype='float32', num_results=10, return_score=True, dialect=2, sort_by=None, in_order=False, hybrid_policy=None, batch_size=None, ef_runtime=None, search_window_size=None, use_search_history=None, search_buffer_capacity=None, normalize_vector_distance=False)`

Bases: `BaseVectorQuery`, `BaseQuery`

A query for running a vector search along with an optional filter
expression.

* **Parameters:**
  * **vector** (*List* *[* *float* *]*) – The vector to perform the vector search with.
  * **vector_field_name** (*str*) – The name of the vector field to search
    against in the database.
  * **return_fields** (*List* *[* *str* *]*) – The declared fields to return with search
    results.
  * **filter_expression** (*Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *,* *optional*) – A filter to apply
    along with the vector search. Defaults to None.
  * **dtype** (*str* *,* *optional*) – The dtype of the vector. Defaults to
    "float32".
  * **num_results** (*int* *,* *optional*) – The top k results to return from the
    vector search. Defaults to 10.
  * **return_score** (*bool* *,* *optional*) – Whether to return the vector
    distance. Defaults to True.
  * **dialect** (*int* *,* *optional*) – The Redis Search query dialect.
    Defaults to 2.
  * **sort_by** (*Optional* *[* *SortSpec* *]*) – The field(s) to order the results by. Can be:
    - str: single field name
    - Tuple[str, str]: (field_name, "ASC"|"DESC")
    - List: list of fields or tuples
    Note: Only the first field is used for Redis sorting.
    Defaults to None. Results will be ordered by vector distance.
  * **in_order** (*bool*) – Requires the terms in the field to have
    the same order as the terms in the query filter, regardless of
    the offsets between them. Defaults to False.
  * **hybrid_policy** (*Optional* *[* *str* *]*) – Controls how filters are applied during vector search.
    Options are "BATCHES" (paginates through small batches of nearest neighbors) or
    "ADHOC_BF" (computes scores for all vectors passing the filter).
    "BATCHES" mode is typically faster for queries with selective filters.
    "ADHOC_BF" mode is better when filters match a large portion of the dataset.
    Defaults to None, which lets Redis auto-select the optimal policy.
  * **batch_size** (*Optional* *[* *int* *]*) – When hybrid_policy is "BATCHES", controls the number
    of vectors to fetch in each batch. Larger values may improve performance
    at the cost of memory usage. Only applies when hybrid_policy="BATCHES".
    Defaults to None, which lets Redis auto-select an appropriate batch size.
  * **ef_runtime** (*Optional* *[* *int* *]*) – Controls the size of the dynamic candidate list for HNSW
    algorithm at query time. Higher values improve recall at the expense of
    slower search performance. Defaults to None, which uses the index-defined value.
  * **search_window_size** (*Optional* *[* *int* *]*) – The size of the search window for SVS-VAMANA KNN searches.
    Increasing this value generally yields more accurate but slower search results.
    Defaults to None, which uses the index-defined value (typically 10).
  * **use_search_history** (*Optional* *[* *str* *]*) – For SVS-VAMANA indexes, controls whether to use the
    search buffer or entire search history. Options are "OFF", "ON", or "AUTO".
    "AUTO" is always evaluated internally as "ON". Using the entire history may yield
    a slightly better graph at the cost of more search time.
    Defaults to None, which uses the index-defined value (typically "AUTO").
  * **search_buffer_capacity** (*Optional* *[* *int* *]*) – Tuning parameter for SVS-VAMANA indexes using
    two-level compression (LVQ<X>x<Y> or LeanVec types). Determines the number of vector
    candidates to collect in the first level of search before the re-ranking level.
    Defaults to None, which uses the index-defined value (typically SEARCH_WINDOW_SIZE).
  * **normalize_vector_distance** (*bool*) – Redis supports 3 distance metrics: L2 (euclidean),
    IP (inner product), and COSINE. By default, L2 distance returns an unbounded value.
    COSINE distance returns a value between 0 and 2. IP returns a value determined by
    the magnitude of the vector. Setting this flag to true converts COSINE and L2 distance
    to a similarity score between 0 and 1. Note: setting this flag to true for IP will
    throw a warning since by definition COSINE similarity is normalized IP.
* **Raises:**
  **TypeError** – If filter_expression is not of type redisvl.query.FilterExpression

{{< note >}}
Learn more about vector queries in Redis: [https://redis.io/docs/latest/develop/ai/search-and-query/vectors/#knn-vector-search](https://redis.io/docs/latest/develop/ai/search-and-query/vectors/#knn-vector-search)
{{< /note >}}

#### `dialect(dialect)`

Add a dialect field to the query.

- **dialect** - dialect version to execute the query under

* **Parameters:**
  **dialect** (*int*)
* **Return type:**
  *Query*

#### `expander(expander)`

Add an expander field to the query.

- **expander** - the name of the expander

* **Parameters:**
  **expander** (*str*)
* **Return type:**
  *Query*

#### `in_order()`

Match only documents where the query terms appear in
the same order in the document.
i.e., for the query "hello world", we do not match "world hello"

* **Return type:**
  *Query*

#### `language(language)`

Analyze the query as being in the specified language.

* **Parameters:**
  **language** (*str*) – The language (e.g. chinese or english)
* **Return type:**
  *Query*

#### `limit_fields(*fields)`

Limit the search to specific TEXT fields only.

- **fields**: Each element should be a string, case sensitive field name

from the defined schema.

* **Parameters:**
  **fields** (*str*)
* **Return type:**
  *Query*

#### `limit_ids(*ids)`

Limit the results to a specific set of pre-known document
ids of any length.

* **Return type:**
  *Query*

#### `no_content()`

Set the query to only return ids and not the document content.

* **Return type:**
  *Query*

#### `no_stopwords()`

Prevent the query from being filtered for stopwords.
Only useful in very big queries that you are certain contain
no stopwords.

* **Return type:**
  *Query*

#### `paging(offset, num)`

Set the paging for the query (defaults to 0..10).

- **offset**: Paging offset for the results. Defaults to 0
- **num**: How many results do we want

* **Parameters:**
  * **offset** (*int*)
  * **num** (*int*)
* **Return type:**
  *Query*

#### `query_string()`

Return the query string of this query only.

* **Return type:**
  str

#### `return_fields(*fields, skip_decode=None)`

Set the fields to return with search results.

* **Parameters:**
  * **\*fields** – Variable number of field names to return.
  * **skip_decode** (*str* *|* *list* *[* *str* *]*  *|* *None*) – Optional field name or list of field names that should not be
    decoded. Useful for binary data like embeddings.
* **Returns:**
  Returns the query object for method chaining.
* **Return type:**
  self
* **Raises:**
  **TypeError** – If skip_decode is not a string, list, or None.

#### `scorer(scorer)`

Use a different scoring function to evaluate document relevance.
Default is TFIDF.

Since Redis 8.0 default was changed to BM25STD.

* **Parameters:**
  **scorer** (*str*) – The scoring function to use
  (e.g. TFIDF.DOCNORM or BM25)
* **Return type:**
  *Query*

#### `set_batch_size(batch_size)`

Set the batch size for the query.

* **Parameters:**
  **batch_size** (*int*) – The batch size to use when hybrid_policy is "BATCHES".
* **Raises:**
  * **TypeError** – If batch_size is not an integer
  * **ValueError** – If batch_size is not positive

#### `set_ef_runtime(ef_runtime)`

Set the EF_RUNTIME parameter for the query.

* **Parameters:**
  **ef_runtime** (*int*) – The EF_RUNTIME value to use for HNSW algorithm.
  Higher values improve recall at the expense of slower search.
* **Raises:**
  * **TypeError** – If ef_runtime is not an integer
  * **ValueError** – If ef_runtime is not positive

#### `set_filter(filter_expression=None)`

Set the filter expression for the query.

* **Parameters:**
  **filter_expression** (*Optional* *[* *Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *]* *,* *optional*) – The filter
  expression or query string to use on the query.
* **Raises:**
  **TypeError** – If filter_expression is not a valid FilterExpression or string.

#### `set_hybrid_policy(hybrid_policy)`

Set the hybrid policy for the query.

* **Parameters:**
  **hybrid_policy** (*str*) – The hybrid policy to use. Options are "BATCHES"
  or "ADHOC_BF".
* **Raises:**
  **ValueError** – If hybrid_policy is not one of the valid options

#### `set_search_buffer_capacity(search_buffer_capacity)`

Set the SEARCH_BUFFER_CAPACITY parameter for the query.

* **Parameters:**
  **search_buffer_capacity** (*int*) – Tuning parameter for SVS-VAMANA indexes using
  two-level compression. Determines the number of vector candidates to collect
  in the first level of search before the re-ranking level.
* **Raises:**
  * **TypeError** – If search_buffer_capacity is not an integer
  * **ValueError** – If search_buffer_capacity is not positive

#### `set_search_window_size(search_window_size)`

Set the SEARCH_WINDOW_SIZE parameter for the query.

* **Parameters:**
  **search_window_size** (*int*) – The size of the search window for SVS-VAMANA KNN searches.
  Increasing this value generally yields more accurate but slower search results.
* **Raises:**
  * **TypeError** – If search_window_size is not an integer
  * **ValueError** – If search_window_size is not positive

#### `set_use_search_history(use_search_history)`

Set the USE_SEARCH_HISTORY parameter for the query.

* **Parameters:**
  **use_search_history** (*str*) – For SVS-VAMANA indexes, controls whether to use the
  search buffer or entire search history. Options are "OFF", "ON", or "AUTO".
* **Raises:**
  * **TypeError** – If use_search_history is not a string
  * **ValueError** – If use_search_history is not one of "OFF", "ON", or "AUTO"

#### `slop(slop)`

Allow a maximum of N intervening non-matched terms between
phrase terms (0 means exact phrase).

* **Parameters:**
  **slop** (*int*)
* **Return type:**
  *Query*

#### `sort_by(sort_spec=None, asc=True)`

Set the sort order for query results.

This method supports sorting by single or multiple fields. Note that Redis Search
natively supports only a single SORTBY field. When multiple fields are specified,
only the FIRST field is used for the Redis SORTBY clause.

* **Parameters:**
  * **sort_spec** (*str* *|* *tuple* *[* *str* *,* *str* *]*  *|* *list* *[* *str* *|* *tuple* *[* *str* *,* *str* *]* *]*  *|* *None*) – Sort specification in various formats:
    - str: single field name
    - Tuple[str, str]: (field_name, "ASC"|"DESC")
    - List: list of field names or tuples
  * **asc** (*bool*) – Default sort direction when not specified (only used when sort_spec is a string).
    Defaults to True (ascending).
* **Returns:**
  Returns the query object for method chaining.
* **Return type:**
  self
* **Raises:**
  * **TypeError** – If sort_spec is not a valid type.
  * **ValueError** – If direction is not "ASC" or "DESC".

### `Examples`

```pycon
>> query.sort_by("price")  # Single field, ascending
>> query.sort_by(("price", "DESC"))  # Single field, descending
>> query.sort_by(["price", "rating"])  # Multiple fields (only first used)
>> query.sort_by([("price", "DESC"), ("rating", "ASC")])
```

{{< note >}}
When multiple fields are specified, only the first field is used for sorting
in Redis. Future versions may support multi-field sorting through post-query
sorting in Python.
{{< /note >}}

#### `timeout(timeout)`

overrides the timeout parameter of the module

* **Parameters:**
  **timeout** (*float*)
* **Return type:**
  *Query*

#### `verbatim()`

Set the query to be verbatim, i.e., use no query expansion
or stemming.

* **Return type:**
  *Query*

#### `with_payloads()`

Ask the engine to return document payloads.

* **Return type:**
  *Query*

#### `with_scores()`

Ask the engine to return document search scores.

* **Return type:**
  *Query*

#### `property batch_size: int | None`

Return the batch size for the query.

* **Returns:**
  The batch size for the query.
* **Return type:**
  Optional[int]

#### `property ef_runtime: int | None`

Return the EF_RUNTIME parameter for the query.

* **Returns:**
  The EF_RUNTIME value for the query.
* **Return type:**
  Optional[int]

#### `property filter: str | `[`FilterExpression`]({{< relref "filter/#filterexpression" >}})` `

The filter expression for the query.

#### `property hybrid_policy: str | None`

Return the hybrid policy for the query.

* **Returns:**
  The hybrid policy for the query.
* **Return type:**
  Optional[str]

#### `property params: dict[str, Any]`

Return the parameters for the query.

* **Returns:**
  The parameters for the query.
* **Return type:**
  Dict[str, Any]

#### `property query: BaseQuery`

Return self as the query object.

#### `property search_buffer_capacity: int | None`

Return the SEARCH_BUFFER_CAPACITY parameter for the query.

* **Returns:**
  The SEARCH_BUFFER_CAPACITY value for the query.
* **Return type:**
  Optional[int]

#### `property search_window_size: int | None`

Return the SEARCH_WINDOW_SIZE parameter for the query.

* **Returns:**
  The SEARCH_WINDOW_SIZE value for the query.
* **Return type:**
  Optional[int]

#### `property use_search_history: str | None`

Return the USE_SEARCH_HISTORY parameter for the query.

* **Returns:**
  The USE_SEARCH_HISTORY value for the query.
* **Return type:**
  Optional[str]

{{< note >}}
**Runtime Parameters for Performance Tuning**

VectorQuery supports runtime parameters for HNSW and SVS-VAMANA indexes that can be adjusted at query time without rebuilding the index:

**HNSW Parameters:**

- `ef_runtime`: Controls search accuracy (higher = better recall, slower search)

**SVS-VAMANA Parameters:**

- `search_window_size`: Size of search window for KNN searches
- `use_search_history`: Whether to use search buffer (OFF/ON/AUTO)
- `search_buffer_capacity`: Tuning parameter for 2-level compression

Example with HNSW runtime parameters:

```python
from redisvl.query import VectorQuery

query = VectorQuery(
    vector=[0.1, 0.2, 0.3],
    vector_field_name="embedding",
    num_results=10,
    ef_runtime=150  # Higher for better recall
)
```

Example with SVS-VAMANA runtime parameters:

```python
query = VectorQuery(
    vector=[0.1, 0.2, 0.3],
    vector_field_name="embedding",
    num_results=10,
    search_window_size=20,
    use_search_history='ON',
    search_buffer_capacity=30
)
```
{{< /note >}}

## VectorRangeQuery

### `class VectorRangeQuery(vector, vector_field_name, return_fields=None, filter_expression=None, dtype='float32', distance_threshold=0.2, epsilon=None, search_window_size=None, use_search_history=None, search_buffer_capacity=None, num_results=10, return_score=True, dialect=2, sort_by=None, in_order=False, hybrid_policy=None, batch_size=None, normalize_vector_distance=False)`

Bases: `BaseVectorQuery`, `BaseQuery`

A query for running a filtered vector search based on semantic
distance threshold.

* **Parameters:**
  * **vector** (*List* *[* *float* *]*) – The vector to perform the range query with.
  * **vector_field_name** (*str*) – The name of the vector field to search
    against in the database.
  * **return_fields** (*List* *[* *str* *]*) – The declared fields to return with search
    results.
  * **filter_expression** (*Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *,* *optional*) – A filter to apply
    along with the range query. Defaults to None.
  * **dtype** (*str* *,* *optional*) – The dtype of the vector. Defaults to
    "float32".
  * **distance_threshold** (*float*) – The threshold for vector distance.
    A smaller threshold indicates a stricter semantic search.
    Defaults to 0.2.
  * **epsilon** (*Optional* *[* *float* *]*) – The relative factor for vector range queries,
    setting boundaries for candidates within radius \* (1 + epsilon).
    This controls how extensive the search is beyond the specified radius.
    Higher values increase recall at the expense of performance.
    Defaults to None, which uses the index-defined epsilon (typically 0.01).
  * **search_window_size** (*Optional* *[* *int* *]*) – The size of the search window for SVS-VAMANA range searches.
    Increasing this value generally yields more accurate but slower search results.
    Defaults to None, which uses the index-defined value (typically 10).
  * **use_search_history** (*Optional* *[* *str* *]*) – For SVS-VAMANA indexes, controls whether to use the
    search buffer or entire search history. Options are "OFF", "ON", or "AUTO".
    "AUTO" is always evaluated internally as "ON". Using the entire history may yield
    a slightly better graph at the cost of more search time.
    Defaults to None, which uses the index-defined value (typically "AUTO").
  * **search_buffer_capacity** (*Optional* *[* *int* *]*) – Tuning parameter for SVS-VAMANA indexes using
    two-level compression (LVQ<X>x<Y> or LeanVec types). Determines the number of vector
    candidates to collect in the first level of search before the re-ranking level.
    Defaults to None, which uses the index-defined value (typically SEARCH_WINDOW_SIZE).
  * **num_results** (*int*) – The MAX number of results to return.
    Defaults to 10.
  * **return_score** (*bool* *,* *optional*) – Whether to return the vector
    distance. Defaults to True.
  * **dialect** (*int* *,* *optional*) – The Redis Search query dialect.
    Defaults to 2.
  * **sort_by** (*Optional* *[* *SortSpec* *]*) – The field(s) to order the results by. Can be:
    - str: single field name
    - Tuple[str, str]: (field_name, "ASC"|"DESC")
    - List: list of fields or tuples
    Note: Only the first field is used for Redis sorting.
    Defaults to None. Results will be ordered by vector distance.
  * **in_order** (*bool*) – Requires the terms in the field to have
    the same order as the terms in the query filter, regardless of
    the offsets between them. Defaults to False.
  * **hybrid_policy** (*Optional* *[* *str* *]*) – Controls how filters are applied during vector search.
    Options are "BATCHES" (paginates through small batches of nearest neighbors) or
    "ADHOC_BF" (computes scores for all vectors passing the filter).
    "BATCHES" mode is typically faster for queries with selective filters.
    "ADHOC_BF" mode is better when filters match a large portion of the dataset.
    Defaults to None, which lets Redis auto-select the optimal policy.
  * **batch_size** (*Optional* *[* *int* *]*) – When hybrid_policy is "BATCHES", controls the number
    of vectors to fetch in each batch. Larger values may improve performance
    at the cost of memory usage. Only applies when hybrid_policy="BATCHES".
    Defaults to None, which lets Redis auto-select an appropriate batch size.
  * **normalize_vector_distance** (*bool*) – Redis supports 3 distance metrics: L2 (euclidean),
    IP (inner product), and COSINE. By default, L2 distance returns an unbounded value.
    COSINE distance returns a value between 0 and 2. IP returns a value determined by
    the magnitude of the vector. Setting this flag to true converts COSINE and L2 distance
    to a similarity score between 0 and 1. Note: setting this flag to true for IP will
    throw a warning since by definition COSINE similarity is normalized IP.
* **Raises:**
  **TypeError** – If filter_expression is not of type redisvl.query.FilterExpression

{{< note >}}
Learn more about vector range queries: [https://redis.io/docs/interact/search-and-query/search/vectors/#range-query](https://redis.io/docs/interact/search-and-query/search/vectors/#range-query)
{{< /note >}}

#### `dialect(dialect)`

Add a dialect field to the query.

- **dialect** - dialect version to execute the query under

* **Parameters:**
  **dialect** (*int*)
* **Return type:**
  *Query*

#### `expander(expander)`

Add an expander field to the query.

- **expander** - the name of the expander

* **Parameters:**
  **expander** (*str*)
* **Return type:**
  *Query*

#### `in_order()`

Match only documents where the query terms appear in
the same order in the document.
i.e., for the query "hello world", we do not match "world hello"

* **Return type:**
  *Query*

#### `language(language)`

Analyze the query as being in the specified language.

* **Parameters:**
  **language** (*str*) – The language (e.g. chinese or english)
* **Return type:**
  *Query*

#### `limit_fields(*fields)`

Limit the search to specific TEXT fields only.

- **fields**: Each element should be a string, case sensitive field name

from the defined schema.

* **Parameters:**
  **fields** (*str*)
* **Return type:**
  *Query*

#### `limit_ids(*ids)`

Limit the results to a specific set of pre-known document
ids of any length.

* **Return type:**
  *Query*

#### `no_content()`

Set the query to only return ids and not the document content.

* **Return type:**
  *Query*

#### `no_stopwords()`

Prevent the query from being filtered for stopwords.
Only useful in very big queries that you are certain contain
no stopwords.

* **Return type:**
  *Query*

#### `paging(offset, num)`

Set the paging for the query (defaults to 0..10).

- **offset**: Paging offset for the results. Defaults to 0
- **num**: How many results do we want

* **Parameters:**
  * **offset** (*int*)
  * **num** (*int*)
* **Return type:**
  *Query*

#### `query_string()`

Return the query string of this query only.

* **Return type:**
  str

#### `return_fields(*fields, skip_decode=None)`

Set the fields to return with search results.

* **Parameters:**
  * **\*fields** – Variable number of field names to return.
  * **skip_decode** (*str* *|* *list* *[* *str* *]*  *|* *None*) – Optional field name or list of field names that should not be
    decoded. Useful for binary data like embeddings.
* **Returns:**
  Returns the query object for method chaining.
* **Return type:**
  self
* **Raises:**
  **TypeError** – If skip_decode is not a string, list, or None.

#### `scorer(scorer)`

Use a different scoring function to evaluate document relevance.
Default is TFIDF.

Since Redis 8.0 default was changed to BM25STD.

* **Parameters:**
  **scorer** (*str*) – The scoring function to use
  (e.g. TFIDF.DOCNORM or BM25)
* **Return type:**
  *Query*

#### `set_batch_size(batch_size)`

Set the batch size for the query.

* **Parameters:**
  **batch_size** (*int*) – The batch size to use when hybrid_policy is "BATCHES".
* **Raises:**
  * **TypeError** – If batch_size is not an integer
  * **ValueError** – If batch_size is not positive

#### `set_distance_threshold(distance_threshold)`

Set the distance threshold for the query.

* **Parameters:**
  **distance_threshold** (*float*) – Vector distance threshold.
* **Raises:**
  * **TypeError** – If distance_threshold is not a float or int
  * **ValueError** – If distance_threshold is negative

#### `set_epsilon(epsilon)`

Set the epsilon parameter for the range query.

* **Parameters:**
  **epsilon** (*float*) – The relative factor for vector range queries,
  setting boundaries for candidates within radius \* (1 + epsilon).
* **Raises:**
  * **TypeError** – If epsilon is not a float or int
  * **ValueError** – If epsilon is negative

#### `set_filter(filter_expression=None)`

Set the filter expression for the query.

* **Parameters:**
  **filter_expression** (*Optional* *[* *Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *]* *,* *optional*) – The filter
  expression or query string to use on the query.
* **Raises:**
  **TypeError** – If filter_expression is not a valid FilterExpression or string.

#### `set_hybrid_policy(hybrid_policy)`

Set the hybrid policy for the query.

* **Parameters:**
  **hybrid_policy** (*str*) – The hybrid policy to use. Options are "BATCHES"
  or "ADHOC_BF".
* **Raises:**
  **ValueError** – If hybrid_policy is not one of the valid options

#### `set_search_buffer_capacity(search_buffer_capacity)`

Set the SEARCH_BUFFER_CAPACITY parameter for the range query.

* **Parameters:**
  **search_buffer_capacity** (*int*) – Tuning parameter for SVS-VAMANA indexes using
  two-level compression.
* **Raises:**
  * **TypeError** – If search_buffer_capacity is not an integer
  * **ValueError** – If search_buffer_capacity is not positive

#### `set_search_window_size(search_window_size)`

Set the SEARCH_WINDOW_SIZE parameter for the range query.

* **Parameters:**
  **search_window_size** (*int*) – The size of the search window for SVS-VAMANA range searches.
* **Raises:**
  * **TypeError** – If search_window_size is not an integer
  * **ValueError** – If search_window_size is not positive

#### `set_use_search_history(use_search_history)`

Set the USE_SEARCH_HISTORY parameter for the range query.

* **Parameters:**
  **use_search_history** (*str*) – Controls whether to use the search buffer or entire history.
  Must be one of "OFF", "ON", or "AUTO".
* **Raises:**
  * **TypeError** – If use_search_history is not a string
  * **ValueError** – If use_search_history is not one of the valid options

#### `slop(slop)`

Allow a maximum of N intervening non-matched terms between
phrase terms (0 means exact phrase).

* **Parameters:**
  **slop** (*int*)
* **Return type:**
  *Query*

#### `sort_by(sort_spec=None, asc=True)`

Set the sort order for query results.

This method supports sorting by single or multiple fields. Note that Redis Search
natively supports only a single SORTBY field. When multiple fields are specified,
only the FIRST field is used for the Redis SORTBY clause.

* **Parameters:**
  * **sort_spec** (*str* *|* *tuple* *[* *str* *,* *str* *]*  *|* *list* *[* *str* *|* *tuple* *[* *str* *,* *str* *]* *]*  *|* *None*) – Sort specification in various formats:
    - str: single field name
    - Tuple[str, str]: (field_name, "ASC"|"DESC")
    - List: list of field names or tuples
  * **asc** (*bool*) – Default sort direction when not specified (only used when sort_spec is a string).
    Defaults to True (ascending).
* **Returns:**
  Returns the query object for method chaining.
* **Return type:**
  self
* **Raises:**
  * **TypeError** – If sort_spec is not a valid type.
  * **ValueError** – If direction is not "ASC" or "DESC".

### `Examples`

```pycon
>> query.sort_by("price")  # Single field, ascending
>> query.sort_by(("price", "DESC"))  # Single field, descending
>> query.sort_by(["price", "rating"])  # Multiple fields (only first used)
>> query.sort_by([("price", "DESC"), ("rating", "ASC")])
```

{{< note >}}
When multiple fields are specified, only the first field is used for sorting
in Redis. Future versions may support multi-field sorting through post-query
sorting in Python.
{{< /note >}}

#### `timeout(timeout)`

overrides the timeout parameter of the module

* **Parameters:**
  **timeout** (*float*)
* **Return type:**
  *Query*

#### `verbatim()`

Set the query to be verbatim, i.e., use no query expansion
or stemming.

* **Return type:**
  *Query*

#### `with_payloads()`

Ask the engine to return document payloads.

* **Return type:**
  *Query*

#### `with_scores()`

Ask the engine to return document search scores.

* **Return type:**
  *Query*

#### `property batch_size: int | None`

Return the batch size for the query.

* **Returns:**
  The batch size for the query.
* **Return type:**
  Optional[int]

#### `property distance_threshold: float`

Return the distance threshold for the query.

* **Returns:**
  The distance threshold for the query.
* **Return type:**
  float

#### `property epsilon: float | None`

Return the epsilon for the query.

* **Returns:**
  The epsilon for the query, or None if not set.
* **Return type:**
  Optional[float]

#### `property filter: str | `[`FilterExpression`]({{< relref "filter/#filterexpression" >}})` `

The filter expression for the query.

#### `property hybrid_policy: str | None`

Return the hybrid policy for the query.

* **Returns:**
  The hybrid policy for the query.
* **Return type:**
  Optional[str]

#### `property params: dict[str, Any]`

Return the parameters for the query.

* **Returns:**
  The parameters for the query.
* **Return type:**
  Dict[str, Any]

#### `property query: BaseQuery`

Return self as the query object.

#### `property search_buffer_capacity: int | None`

Return the SEARCH_BUFFER_CAPACITY parameter for the query.

* **Returns:**
  The SEARCH_BUFFER_CAPACITY value for the query.
* **Return type:**
  Optional[int]

#### `property search_window_size: int | None`

Return the SEARCH_WINDOW_SIZE parameter for the query.

* **Returns:**
  The SEARCH_WINDOW_SIZE value for the query.
* **Return type:**
  Optional[int]

#### `property use_search_history: str | None`

Return the USE_SEARCH_HISTORY parameter for the query.

* **Returns:**
  The USE_SEARCH_HISTORY value for the query.
* **Return type:**
  Optional[str]

{{< note >}}
**Runtime Parameters for Range Queries**

VectorRangeQuery supports runtime parameters for controlling range search behavior:

**HNSW & SVS-VAMANA Parameters:**

- `epsilon`: Range search approximation factor (default: 0.01)

**SVS-VAMANA Parameters:**

- `search_window_size`: Size of search window
- `use_search_history`: Whether to use search buffer (OFF/ON/AUTO)
- `search_buffer_capacity`: Tuning parameter for 2-level compression

Example:

```python
from redisvl.query import VectorRangeQuery

query = VectorRangeQuery(
    vector=[0.1, 0.2, 0.3],
    vector_field_name="embedding",
    distance_threshold=0.3,
    epsilon=0.05,              # Approximation factor
    search_window_size=20,     # SVS-VAMANA only
    use_search_history='AUTO'  # SVS-VAMANA only
)
```
{{< /note >}}

## AggregateHybridQuery

### `class AggregateHybridQuery(text, text_field_name, vector, vector_field_name, text_scorer='BM25STD', filter_expression=None, alpha=0.7, dtype='float32', num_results=10, return_fields=None, stopwords='english', dialect=2, text_weights=None)`

Bases: `AggregationQuery`

AggregateHybridQuery combines text and vector search in Redis.
It allows you to perform a hybrid search using both text and vector similarity.
It scores documents based on a weighted combination of text and vector similarity.

```python
from redisvl.query import AggregateHybridQuery
from redisvl.index import SearchIndex

index = SearchIndex.from_yaml("path/to/index.yaml")

query = AggregateHybridQuery(
    text="example text",
    text_field_name="text_field",
    vector=[0.1, 0.2, 0.3],
    vector_field_name="vector_field",
    text_scorer="BM25STD",
    filter_expression=None,
    alpha=0.7,
    dtype="float32",
    num_results=10,
    return_fields=["field1", "field2"],
    stopwords="english",
    dialect=2,
)

results = index.query(query)
```

Instantiates a AggregateHybridQuery object.

* **Parameters:**
  * **text** (*str*) – The text to search for.
  * **text_field_name** (*str*) – The text field name to search in.
  * **vector** (*Union* *[* *bytes* *,* *List* *[* *float* *]* *]*) – The vector to perform vector similarity search.
  * **vector_field_name** (*str*) – The vector field name to search in.
  * **text_scorer** (*str* *,* *optional*) – The text scorer to use. Options are {TFIDF, TFIDF.DOCNORM,
    BM25, DISMAX, DOCSCORE, BM25STD}. Defaults to "BM25STD".
  * **filter_expression** (*Optional* *[*[*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *,* *optional*) – The filter expression to use.
    Defaults to None.
  * **alpha** (*float* *,* *optional*) – The weight of the vector similarity. Documents will be scored
    as: hybrid_score = (alpha) \* vector_score + (1-alpha) \* text_score.
    Defaults to 0.7.
  * **dtype** (*str* *,* *optional*) – The data type of the vector. Defaults to "float32".
  * **num_results** (*int* *,* *optional*) – The number of results to return. Defaults to 10.
  * **return_fields** (*Optional* *[* *List* *[* *str* *]* *]* *,* *optional*) – The fields to return. Defaults to None.
  * **stopwords** (*Optional* *[* *Union* *[* *str* *,* *Set* *[* *str* *]* *]* *]* *,* *optional*) – 

    The stopwords to remove from the
    provided text prior to search-use. If a string such as "english" "german" is
    provided then a default set of stopwords for that language will be used. if a list,
    set, or tuple of strings is provided then those will be used as stopwords.
    Defaults to "english". if set to "None" then no stopwords will be removed.

    Note: This parameter controls query-time stopword filtering (client-side).
    For index-level stopwords configuration (server-side), see IndexInfo.stopwords.
    Using query-time stopwords with index-level STOPWORDS 0 is counterproductive.
  * **dialect** (*int* *,* *optional*) – The Redis dialect version. Defaults to 2.
  * **text_weights** (*Optional* *[* *Dict* *[* *str* *,* *float* *]* *]*) – The importance weighting of individual words
    within the query text. Defaults to None, as no modifications will be made to the
    text_scorer score.

{{< note >}}
AggregateHybridQuery uses FT.AGGREGATE commands which do NOT support runtime
parameters. For runtime parameter support (ef_runtime, search_window_size, etc.),
use VectorQuery or VectorRangeQuery which use FT.SEARCH commands.
{{< /note >}}

* **Raises:**
  * **ValueError** – If the text string is empty, or if the text string becomes empty after
        stopwords are removed.
  * **TypeError** – If the stopwords are not a set, list, or tuple of strings.
* **Parameters:**
  * **text** (*str*)
  * **text_field_name** (*str*)
  * **vector** (*bytes* *|* *list* *[* *float* *]*)
  * **vector_field_name** (*str*)
  * **text_scorer** (*str*)
  * **filter_expression** (*str* *|* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *|* *None*)
  * **alpha** (*float*)
  * **dtype** (*str*)
  * **num_results** (*int*)
  * **return_fields** (*list* *[* *str* *]*  *|* *None*)
  * **stopwords** (*str* *|* *set* *[* *str* *]*  *|* *None*)
  * **dialect** (*int*)
  * **text_weights** (*dict* *[* *str* *,* *float* *]*  *|* *None*)

#### `add_scores()`

If set, includes the score as an ordinary field of the row.

* **Return type:**
  *AggregateRequest*

#### `apply(**kwexpr)`

Specify one or more projection expressions to add to each result

### `Parameters`

- **kwexpr**: One or more key-value pairs for a projection. The key is
  : the alias for the projection, and the value is the projection
    expression itself, for example apply(square_root="sqrt(@foo)")

* **Return type:**
  *AggregateRequest*

#### `dialect(dialect)`

Add a dialect field to the aggregate command.

- **dialect** - dialect version to execute the query under

* **Parameters:**
  **dialect** (*int*)
* **Return type:**
  *AggregateRequest*

#### `filter(expressions)`

Specify filter for post-query results using predicates relating to
values in the result set.

### `Parameters`

- **fields**: Fields to group by. This can either be a single string,
  : or a list of strings.

* **Parameters:**
  **expressions** (*str* *|* *List* *[* *str* *]*)
* **Return type:**
  *AggregateRequest*

#### `group_by(fields, *reducers)`

Specify by which fields to group the aggregation.

### `Parameters`

- **fields**: Fields to group by. This can either be a single string,
  : or a list of strings. both cases, the field should be specified as
    @field.
- **reducers**: One or more reducers. Reducers may be found in the
  : aggregation module.

* **Parameters:**
  * **fields** (*str* *|* *List* *[* *str* *]*)
  * **reducers** (*Reducer*)
* **Return type:**
  *AggregateRequest*

#### `limit(offset, num)`

Sets the limit for the most recent group or query.

If no group has been defined yet (via group_by()) then this sets
the limit for the initial pool of results from the query. Otherwise,
this limits the number of items operated on from the previous group.

Setting a limit on the initial search results may be useful when
attempting to execute an aggregation on a sample of a large data set.

### `Parameters`

- **offset**: Result offset from which to begin paging
- **num**: Number of results to return

Example of sorting the initial results:

``
AggregateRequest("@sale_amount:[10000, inf]")            .limit(0, 10)            .group_by("@state", r.count())
``

Will only group by the states found in the first 10 results of the
query @sale_amount:[10000, inf]. On the other hand,

``
AggregateRequest("@sale_amount:[10000, inf]")            .limit(0, 1000)            .group_by("@state", r.count()            .limit(0, 10)
``

Will group all the results matching the query, but only return the
first 10 groups.

If you only wish to return a *top-N* style query, consider using
sort_by() instead.

* **Parameters:**
  * **offset** (*int*)
  * **num** (*int*)
* **Return type:**
  *AggregateRequest*

#### `load(*fields)`

Indicate the fields to be returned in the response. These fields are
returned in addition to any others implicitly specified.

### `Parameters`

- **fields**: If fields not specified, all the fields will be loaded.

Otherwise, fields should be given in the format of @field.

* **Parameters:**
  **fields** (*str*)
* **Return type:**
  *AggregateRequest*

#### `scorer(scorer)`

Use a different scoring function to evaluate document relevance.
Default is TFIDF.

* **Parameters:**
  **scorer** (*str*) – The scoring function to use
  (e.g. TFIDF.DOCNORM or BM25)
* **Return type:**
  *AggregateRequest*

#### `set_text_weights(weights)`

Set or update the text weights for the query.

* **Parameters:**
  **weights** (*dict* *[* *str* *,* *float* *]*) – Dictionary of word:weight mappings

#### `sort_by(*fields, **kwargs)`

Indicate how the results should be sorted. This can also be used for
*top-N* style queries

### `Parameters`

- **fields**: The fields by which to sort. This can be either a single
  : field or a list of fields. If you wish to specify order, you can
    use the Asc or Desc wrapper classes.
- **max**: Maximum number of results to return. This can be
  : used instead of LIMIT and is also faster.

Example of sorting by foo ascending and bar descending:

``
sort_by(Asc("@foo"), Desc("@bar"))
``

Return the top 10 customers:

``
AggregateRequest()            .group_by("@customer", r.sum("@paid").alias(FIELDNAME))            .sort_by(Desc("@paid"), max=10)
``

* **Parameters:**
  **fields** (*str*)
* **Return type:**
  *AggregateRequest*

#### `with_schema()`

If set, the schema property will contain a list of [field, type]
entries in the result object.

* **Return type:**
  *AggregateRequest*

#### `property params: dict[str, Any]`

Return the parameters for the aggregation.

* **Returns:**
  The parameters for the aggregation.
* **Return type:**
  Dict[str, Any]

#### `property stopwords: set[str]`

Return the stopwords used in the query.
:returns: The stopwords used in the query.
:rtype: Set[str]

#### `property text_weights: dict[str, float]`

Get the text weights.

* **Returns:**
  weight mappings.
* **Return type:**
  Dictionary of word

{{< note >}}
The `stopwords` parameter in [AggregateHybridQuery](#aggregatehybridquery) (and `HybridQuery`) controls query-time stopword filtering (client-side).
For index-level stopwords configuration (server-side), see `redisvl.schema.IndexInfo.stopwords`.
Using query-time stopwords with index-level `STOPWORDS 0` is counterproductive.
{{< /note >}}

{{< note >}}
`HybridQuery` and [AggregateHybridQuery](#aggregatehybridquery) apply linear combination inconsistently. `HybridQuery` uses `linear_alpha` to weight the text score, while [AggregateHybridQuery](#aggregatehybridquery) uses `alpha` to weight the vector score. When switching between the two classes, take care to revise your `alpha` setting.
{{< /note >}}

{{< note >}}
**Runtime Parameters for Hybrid Queries**

**Important:** AggregateHybridQuery uses FT.AGGREGATE commands which do NOT support runtime parameters.
Runtime parameters (`ef_runtime`, `search_window_size`, `use_search_history`, `search_buffer_capacity`)
are only supported with FT.SEARCH commands.

For runtime parameter support, use `HybridQuery`, [VectorQuery](#vectorquery), or [VectorRangeQuery](#vectorrangequery) instead of AggregateHybridQuery.

Example with HybridQuery (supports runtime parameters):

```python
from redisvl.query import HybridQuery

query = HybridQuery(
    text="query string",
    text_field_name="description",
    vector=[0.1, 0.2, 0.3],
    vector_field_name="embedding",
    vector_search_method="KNN",
    knn_ef_runtime=150,  # Runtime parameters work with HybridQuery
    return_fields=["description"],
    num_results=10,
)
```
{{< /note >}}

## HybridQuery

### `class HybridQuery(text, text_field_name, vector, vector_field_name, vector_param_name='vector', text_scorer='BM25STD', yield_text_score_as=None, vector_search_method=None, knn_ef_runtime=10, range_radius=None, range_epsilon=0.01, yield_vsim_score_as=None, filter_expression=None, combination_method=None, rrf_window=20, rrf_constant=60, linear_alpha=0.3, yield_combined_score_as=None, dtype='float32', num_results=10, return_fields=None, stopwords='english', text_weights=None)`

Bases: `object`

A hybrid search query that combines text search and vector similarity, with configurable fusion methods.

```python
from redisvl.query import HybridQuery
from redisvl.index import SearchIndex

index = SearchIndex.from_yaml("path/to/index.yaml")

query = HybridQuery(
    text="example text",
    text_field_name="text_field",
    vector=[0.1, 0.2, 0.3],
    vector_field_name="vector_field",
    text_scorer="BM25STD",
    yield_text_score_as="text_score",
    yield_vsim_score_as="vector_similarity",
    combination_method="LINEAR",
    linear_alpha=0.3,
    yield_combined_score_as="hybrid_score",
    num_results=10,
    return_fields=["field1", "field2"],
    stopwords="english",
)

results = index.query(query)
```

{{< note >}}
- [FT.HYBRID command documentation](https://redis.io/docs/latest/commands/ft.hybrid)
{{< /note >}}
- [redis-py hybrid_search documentation](https://redis.readthedocs.io/en/stable/redismodules.html#redis.commands.search.commands.SearchCommands.hybrid_search)

Instantiates a HybridQuery object.

* **Parameters:**
  * **text** (*str*) – The text to search for.
  * **text_field_name** (*str*) – The text field name to search in.
  * **vector** (*bytes* *|* *list* *[* *float* *]*) – The vector to perform vector similarity search.
  * **vector_field_name** (*str*) – The vector field name to search in.
  * **vector_param_name** (*str*) – The name of the parameter substitution containing the vector blob.
  * **text_scorer** (*str*) – The text scorer to use. Options are {TFIDF, TFIDF.DOCNORM,
    BM25STD, BM25STD.NORM, BM25STD.TANH, DISMAX, DOCSCORE, HAMMING}. Defaults to "BM25STD". For more
    information about supported scoring algorithms,
    see [https://redis.io/docs/latest/develop/ai/search-and-query/advanced-concepts/scoring/](https://redis.io/docs/latest/develop/ai/search-and-query/advanced-concepts/scoring/)
  * **yield_text_score_as** (*str* *|* *None*) – The name of the field to yield the text score as.
  * **vector_search_method** (*Literal* *[* *'KNN'* *,*  *'RANGE'* *]*  *|* *None*) – The vector search method to use. Options are {KNN, RANGE}. Defaults to None.
  * **knn_ef_runtime** (*int*) – The exploration factor parameter for HNSW, optional if vector_search_method is "KNN".
  * **range_radius** (*float* *|* *None*) – The search radius to use, required if vector_search_method is "RANGE".
  * **range_epsilon** (*float*) – The epsilon value to use, optional if vector_search_method is "RANGE"; defines the
    accuracy of the search.
  * **yield_vsim_score_as** (*str* *|* *None*) – The name of the field to yield the vector similarity score as.
  * **filter_expression** (*str* *|* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *|* *None*) – The filter expression to use for both the text and vector searches. Defaults to None.
  * **combination_method** (*Literal* *[* *'RRF'* *,*  *'LINEAR'* *]*  *|* *None*) – The combination method to use. Options are {RRF, LINEAR}. If not specified, the server
    defaults to RRF. If "RRF" is specified, then at least one of rrf_window or rrf_constant must be
    provided. If "LINEAR" is specified, then at least one of linear_alpha or linear_beta must be
    provided.
  * **rrf_window** (*int*) – The window size to use for the reciprocal rank fusion (RRF) combination method. Limits
    fusion scope.
  * **rrf_constant** (*int*) – The constant to use for the reciprocal rank fusion (RRF) combination method. Controls decay
    of rank influence.
  * **linear_alpha** (*float*) – The weight of the text query for the linear combination method (LINEAR).
  * **yield_combined_score_as** (*str* *|* *None*) – The name of the field to yield the combined score as.
  * **dtype** (*str*) – The data type of the vector. Defaults to "float32".
  * **num_results** (*int* *|* *None*) – The number of results to return.
  * **return_fields** (*list* *[* *str* *]*  *|* *None*) – The fields to return. Defaults to None.
  * **stopwords** (*Optional* *[* *Union* *[* *str* *,* *Set* *[* *str* *]* *]* *]* *,* *optional*) – 

    The stopwords to remove from the
    provided text prior to search-use. If a string such as "english" "german" is
    provided then a default set of stopwords for that language will be used. if a list,
    set, or tuple of strings is provided then those will be used as stopwords.
    Defaults to "english". if set to "None" then no stopwords will be removed.

    Note: This parameter controls query-time stopword filtering (client-side).
    For index-level stopwords configuration (server-side), see IndexInfo.stopwords.
    Using query-time stopwords with index-level STOPWORDS 0 is counterproductive.
  * **text_weights** (*Optional* *[* *Dict* *[* *str* *,* *float* *]* *]*) – The importance weighting of individual words
    within the query text. Defaults to None, as no modifications will be made to the
    text_scorer score.
* **Raises:**
  * **ImportError** – If redis-py>=7.1.0 is not installed.
  * **TypeError** – If the stopwords are not a set, list, or tuple of strings.
  * **ValueError** – If the text string is empty, or if the text string becomes empty after
        stopwords are removed.
  * **ValueError** – If vector_search_method is defined and isn’t one of {KNN, RANGE}.
  * **ValueError** – If vector_search_method is "KNN" and knn_k is not provided.
  * **ValueError** – If vector_search_method is "RANGE" and range_radius is not provided.

{{< note >}}
The `stopwords` parameter in [HybridQuery](#hybridquery) (and `AggregateHybridQuery`) controls query-time stopword filtering (client-side).
For index-level stopwords configuration (server-side), see `redisvl.schema.IndexInfo.stopwords`.
Using query-time stopwords with index-level `STOPWORDS 0` is counterproductive.
{{< /note >}}

{{< note >}}
[HybridQuery](#hybridquery) and `AggregateHybridQuery` apply linear combination inconsistently. [HybridQuery](#hybridquery) uses `linear_alpha` to weight the text score, while `AggregateHybridQuery` uses `alpha` to weight the vector score. When switching between the two classes, take care to revise your `alpha` setting.
{{< /note >}}

## TextQuery

### `class TextQuery(text, text_field_name, text_scorer='BM25STD', filter_expression=None, return_fields=None, num_results=10, return_score=True, dialect=2, sort_by=None, in_order=False, params=None, stopwords='english', text_weights=None)`

Bases: `BaseQuery`

TextQuery is a query for running a full text search, along with an optional filter expression.

```python
from redisvl.query import TextQuery
from redisvl.index import SearchIndex

index = SearchIndex.from_yaml("index.yaml")

query = TextQuery(
    text="example text",
    text_field_name="text_field",
    text_scorer="BM25STD",
    filter_expression=None,
    num_results=10,
    return_fields=["field1", "field2"],
    stopwords="english",
    dialect=2,
)

results = index.query(query)
```

A query for running a full text search, along with an optional filter expression.

* **Parameters:**
  * **text** (*str*) – The text string to perform the text search with.
  * **text_field_name** (*Union* *[* *str* *,* *Dict* *[* *str* *,* *float* *]* *]*) – The name of the document field to perform
    text search on, or a dictionary mapping field names to their weights.
  * **text_scorer** (*str* *,* *optional*) – The text scoring algorithm to use.
    Defaults to BM25STD. Options are {TFIDF, BM25STD, BM25, TFIDF.DOCNORM, DISMAX, DOCSCORE}.
    See [https://redis.io/docs/latest/develop/interact/search-and-query/advanced-concepts/scoring/](https://redis.io/docs/latest/develop/interact/search-and-query/advanced-concepts/scoring/)
  * **filter_expression** (*Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *,* *optional*) – A filter to apply
    along with the text search. Defaults to None.
  * **return_fields** (*List* *[* *str* *]*) – The declared fields to return with search
    results.
  * **num_results** (*int* *,* *optional*) – The top k results to return from the
    search. Defaults to 10.
  * **return_score** (*bool* *,* *optional*) – Whether to return the text score.
    Defaults to True.
  * **dialect** (*int* *,* *optional*) – The Redis Search query dialect.
    Defaults to 2.
  * **sort_by** (*Optional* *[* *SortSpec* *]*) – The field(s) to order the results by. Can be:
    - str: single field name
    - Tuple[str, str]: (field_name, "ASC"|"DESC")
    - List: list of fields or tuples
    Note: Only the first field is used for Redis sorting.
    Defaults to None. Results will be ordered by text score.
  * **in_order** (*bool*) – Requires the terms in the field to have
    the same order as the terms in the query filter, regardless of
    the offsets between them. Defaults to False.
  * **params** (*Optional* *[* *Dict* *[* *str* *,* *Any* *]* *]* *,* *optional*) – The parameters for the query.
    Defaults to None.
  * **stopwords** (*Optional* *[* *Union* *[* *str* *,* *Set* *[* *str* *]* *]*) – 

    The set of stop words to remove
    from the query text (client-side filtering). If a language like ‘english’ or ‘spanish’ is provided
    a default set of stopwords for that language will be used. Users may specify
    their own stop words by providing a List or Set of words. if set to None,
    then no words will be removed. Defaults to ‘english’.

    Note: This parameter controls query-time stopword filtering (client-side).
    For index-level stopwords configuration (server-side), see IndexInfo.stopwords.
    Using query-time stopwords with index-level STOPWORDS 0 is counterproductive.
  * **text_weights** (*Optional* *[* *Dict* *[* *str* *,* *float* *]* *]*) – The importance weighting of individual words
    within the query text. Defaults to None, as no modifications will be made to the
    text_scorer score.
* **Raises:**
  * **ValueError** – if stopwords language string cannot be loaded.
  * **TypeError** – If stopwords is not a valid iterable set of strings.

#### `dialect(dialect)`

Add a dialect field to the query.

- **dialect** - dialect version to execute the query under

* **Parameters:**
  **dialect** (*int*)
* **Return type:**
  *Query*

#### `expander(expander)`

Add an expander field to the query.

- **expander** - the name of the expander

* **Parameters:**
  **expander** (*str*)
* **Return type:**
  *Query*

#### `in_order()`

Match only documents where the query terms appear in
the same order in the document.
i.e., for the query "hello world", we do not match "world hello"

* **Return type:**
  *Query*

#### `language(language)`

Analyze the query as being in the specified language.

* **Parameters:**
  **language** (*str*) – The language (e.g. chinese or english)
* **Return type:**
  *Query*

#### `limit_fields(*fields)`

Limit the search to specific TEXT fields only.

- **fields**: Each element should be a string, case sensitive field name

from the defined schema.

* **Parameters:**
  **fields** (*str*)
* **Return type:**
  *Query*

#### `limit_ids(*ids)`

Limit the results to a specific set of pre-known document
ids of any length.

* **Return type:**
  *Query*

#### `no_content()`

Set the query to only return ids and not the document content.

* **Return type:**
  *Query*

#### `no_stopwords()`

Prevent the query from being filtered for stopwords.
Only useful in very big queries that you are certain contain
no stopwords.

* **Return type:**
  *Query*

#### `paging(offset, num)`

Set the paging for the query (defaults to 0..10).

- **offset**: Paging offset for the results. Defaults to 0
- **num**: How many results do we want

* **Parameters:**
  * **offset** (*int*)
  * **num** (*int*)
* **Return type:**
  *Query*

#### `query_string()`

Return the query string of this query only.

* **Return type:**
  str

#### `return_fields(*fields, skip_decode=None)`

Set the fields to return with search results.

* **Parameters:**
  * **\*fields** – Variable number of field names to return.
  * **skip_decode** (*str* *|* *list* *[* *str* *]*  *|* *None*) – Optional field name or list of field names that should not be
    decoded. Useful for binary data like embeddings.
* **Returns:**
  Returns the query object for method chaining.
* **Return type:**
  self
* **Raises:**
  **TypeError** – If skip_decode is not a string, list, or None.

#### `scorer(scorer)`

Use a different scoring function to evaluate document relevance.
Default is TFIDF.

Since Redis 8.0 default was changed to BM25STD.

* **Parameters:**
  **scorer** (*str*) – The scoring function to use
  (e.g. TFIDF.DOCNORM or BM25)
* **Return type:**
  *Query*

#### `set_field_weights(field_weights)`

Set or update the field weights for the query.

* **Parameters:**
  **field_weights** (*str* *|* *dict* *[* *str* *,* *float* *]*) – Either a single field name or dictionary of field:weight mappings

#### `set_filter(filter_expression=None)`

Set the filter expression for the query.

* **Parameters:**
  **filter_expression** (*Optional* *[* *Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *]* *,* *optional*) – The filter
  expression or query string to use on the query.
* **Raises:**
  **TypeError** – If filter_expression is not a valid FilterExpression or string.

#### `set_text_weights(weights)`

Set or update the text weights for the query.

* **Parameters:**
  * **text_weights** – Dictionary of word:weight mappings
  * **weights** (*dict* *[* *str* *,* *float* *]*)

#### `slop(slop)`

Allow a maximum of N intervening non-matched terms between
phrase terms (0 means exact phrase).

* **Parameters:**
  **slop** (*int*)
* **Return type:**
  *Query*

#### `sort_by(sort_spec=None, asc=True)`

Set the sort order for query results.

This method supports sorting by single or multiple fields. Note that Redis Search
natively supports only a single SORTBY field. When multiple fields are specified,
only the FIRST field is used for the Redis SORTBY clause.

* **Parameters:**
  * **sort_spec** (*str* *|* *tuple* *[* *str* *,* *str* *]*  *|* *list* *[* *str* *|* *tuple* *[* *str* *,* *str* *]* *]*  *|* *None*) – Sort specification in various formats:
    - str: single field name
    - Tuple[str, str]: (field_name, "ASC"|"DESC")
    - List: list of field names or tuples
  * **asc** (*bool*) – Default sort direction when not specified (only used when sort_spec is a string).
    Defaults to True (ascending).
* **Returns:**
  Returns the query object for method chaining.
* **Return type:**
  self
* **Raises:**
  * **TypeError** – If sort_spec is not a valid type.
  * **ValueError** – If direction is not "ASC" or "DESC".

### `Examples`

```pycon
>> query.sort_by("price")  # Single field, ascending
>> query.sort_by(("price", "DESC"))  # Single field, descending
>> query.sort_by(["price", "rating"])  # Multiple fields (only first used)
>> query.sort_by([("price", "DESC"), ("rating", "ASC")])
```

{{< note >}}
When multiple fields are specified, only the first field is used for sorting
in Redis. Future versions may support multi-field sorting through post-query
sorting in Python.
{{< /note >}}

#### `timeout(timeout)`

overrides the timeout parameter of the module

* **Parameters:**
  **timeout** (*float*)
* **Return type:**
  *Query*

#### `verbatim()`

Set the query to be verbatim, i.e., use no query expansion
or stemming.

* **Return type:**
  *Query*

#### `with_payloads()`

Ask the engine to return document payloads.

* **Return type:**
  *Query*

#### `with_scores()`

Ask the engine to return document search scores.

* **Return type:**
  *Query*

#### `property field_weights: dict[str, float]`

Get the field weights for the query.

* **Returns:**
  Dictionary mapping field names to their weights

#### `property filter: str | `[`FilterExpression`]({{< relref "filter/#filterexpression" >}})` `

The filter expression for the query.

#### `property params: dict[str, Any]`

Return the query parameters.

#### `property query: BaseQuery`

Return self as the query object.

#### `property text_field_name: str | dict[str, float]`

Get the text field name(s) - for backward compatibility.

* **Returns:**
  Either a single field name string (if only one field with weight 1.0)
  or a dictionary of field:weight mappings.

#### `property text_weights: dict[str, float]`

Get the text weights.

* **Returns:**
  weight mappings.
* **Return type:**
  Dictionary of word

{{< note >}}
The `stopwords` parameter in [TextQuery](#textquery) controls query-time stopword filtering (client-side).
For index-level stopwords configuration (server-side), see `redisvl.schema.IndexInfo.stopwords`.
Using query-time stopwords with index-level `STOPWORDS 0` is counterproductive.
{{< /note >}}

## FilterQuery

### `class FilterQuery(filter_expression=None, return_fields=None, num_results=10, dialect=2, sort_by=None, in_order=False, params=None)`

Bases: `BaseQuery`

A query for running a filtered search with a filter expression.

* **Parameters:**
  * **filter_expression** (*Optional* *[* *Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *]*) – The optional filter
    expression to query with. Defaults to ‘\*’.
  * **return_fields** (*Optional* *[* *List* *[* *str* *]* *]* *,* *optional*) – The fields to return.
  * **num_results** (*Optional* *[* *int* *]* *,* *optional*) – The number of results to return. Defaults to 10.
  * **dialect** (*int* *,* *optional*) – The query dialect. Defaults to 2.
  * **sort_by** (*Optional* *[* *SortSpec* *]* *,* *optional*) – The field(s) to order the results by. Can be:
    - str: single field name (e.g., "price")
    - Tuple[str, str]: (field_name, "ASC"|"DESC") (e.g., ("price", "DESC"))
    - List: list of fields or tuples (e.g., ["price", ("rating", "DESC")])
    Note: Redis Search only supports single-field sorting, so only the first field is used.
    Defaults to None.
  * **in_order** (*bool* *,* *optional*) – Requires the terms in the field to have the same order as the
    terms in the query filter. Defaults to False.
  * **params** (*Optional* *[* *Dict* *[* *str* *,* *Any* *]* *]* *,* *optional*) – The parameters for the query. Defaults to None.
* **Raises:**
  **TypeError** – If filter_expression is not of type redisvl.query.FilterExpression

#### `dialect(dialect)`

Add a dialect field to the query.

- **dialect** - dialect version to execute the query under

* **Parameters:**
  **dialect** (*int*)
* **Return type:**
  *Query*

#### `expander(expander)`

Add an expander field to the query.

- **expander** - the name of the expander

* **Parameters:**
  **expander** (*str*)
* **Return type:**
  *Query*

#### `in_order()`

Match only documents where the query terms appear in
the same order in the document.
i.e., for the query "hello world", we do not match "world hello"

* **Return type:**
  *Query*

#### `language(language)`

Analyze the query as being in the specified language.

* **Parameters:**
  **language** (*str*) – The language (e.g. chinese or english)
* **Return type:**
  *Query*

#### `limit_fields(*fields)`

Limit the search to specific TEXT fields only.

- **fields**: Each element should be a string, case sensitive field name

from the defined schema.

* **Parameters:**
  **fields** (*str*)
* **Return type:**
  *Query*

#### `limit_ids(*ids)`

Limit the results to a specific set of pre-known document
ids of any length.

* **Return type:**
  *Query*

#### `no_content()`

Set the query to only return ids and not the document content.

* **Return type:**
  *Query*

#### `no_stopwords()`

Prevent the query from being filtered for stopwords.
Only useful in very big queries that you are certain contain
no stopwords.

* **Return type:**
  *Query*

#### `paging(offset, num)`

Set the paging for the query (defaults to 0..10).

- **offset**: Paging offset for the results. Defaults to 0
- **num**: How many results do we want

* **Parameters:**
  * **offset** (*int*)
  * **num** (*int*)
* **Return type:**
  *Query*

#### `query_string()`

Return the query string of this query only.

* **Return type:**
  str

#### `return_fields(*fields, skip_decode=None)`

Set the fields to return with search results.

* **Parameters:**
  * **\*fields** – Variable number of field names to return.
  * **skip_decode** (*str* *|* *list* *[* *str* *]*  *|* *None*) – Optional field name or list of field names that should not be
    decoded. Useful for binary data like embeddings.
* **Returns:**
  Returns the query object for method chaining.
* **Return type:**
  self
* **Raises:**
  **TypeError** – If skip_decode is not a string, list, or None.

#### `scorer(scorer)`

Use a different scoring function to evaluate document relevance.
Default is TFIDF.

Since Redis 8.0 default was changed to BM25STD.

* **Parameters:**
  **scorer** (*str*) – The scoring function to use
  (e.g. TFIDF.DOCNORM or BM25)
* **Return type:**
  *Query*

#### `set_filter(filter_expression=None)`

Set the filter expression for the query.

* **Parameters:**
  **filter_expression** (*Optional* *[* *Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *]* *,* *optional*) – The filter
  expression or query string to use on the query.
* **Raises:**
  **TypeError** – If filter_expression is not a valid FilterExpression or string.

#### `slop(slop)`

Allow a maximum of N intervening non-matched terms between
phrase terms (0 means exact phrase).

* **Parameters:**
  **slop** (*int*)
* **Return type:**
  *Query*

#### `sort_by(sort_spec=None, asc=True)`

Set the sort order for query results.

This method supports sorting by single or multiple fields. Note that Redis Search
natively supports only a single SORTBY field. When multiple fields are specified,
only the FIRST field is used for the Redis SORTBY clause.

* **Parameters:**
  * **sort_spec** (*str* *|* *tuple* *[* *str* *,* *str* *]*  *|* *list* *[* *str* *|* *tuple* *[* *str* *,* *str* *]* *]*  *|* *None*) – Sort specification in various formats:
    - str: single field name
    - Tuple[str, str]: (field_name, "ASC"|"DESC")
    - List: list of field names or tuples
  * **asc** (*bool*) – Default sort direction when not specified (only used when sort_spec is a string).
    Defaults to True (ascending).
* **Returns:**
  Returns the query object for method chaining.
* **Return type:**
  self
* **Raises:**
  * **TypeError** – If sort_spec is not a valid type.
  * **ValueError** – If direction is not "ASC" or "DESC".

### `Examples`

```pycon
>> query.sort_by("price")  # Single field, ascending
>> query.sort_by(("price", "DESC"))  # Single field, descending
>> query.sort_by(["price", "rating"])  # Multiple fields (only first used)
>> query.sort_by([("price", "DESC"), ("rating", "ASC")])
```

{{< note >}}
When multiple fields are specified, only the first field is used for sorting
in Redis. Future versions may support multi-field sorting through post-query
sorting in Python.
{{< /note >}}

#### `timeout(timeout)`

overrides the timeout parameter of the module

* **Parameters:**
  **timeout** (*float*)
* **Return type:**
  *Query*

#### `verbatim()`

Set the query to be verbatim, i.e., use no query expansion
or stemming.

* **Return type:**
  *Query*

#### `with_payloads()`

Ask the engine to return document payloads.

* **Return type:**
  *Query*

#### `with_scores()`

Ask the engine to return document search scores.

* **Return type:**
  *Query*

#### `property filter: str | `[`FilterExpression`]({{< relref "filter/#filterexpression" >}})` `

The filter expression for the query.

#### `property params: dict[str, Any]`

Return the query parameters.

#### `property query: BaseQuery`

Return self as the query object.

## CountQuery

### `class CountQuery(filter_expression=None, dialect=2, params=None)`

Bases: `BaseQuery`

A query for a simple count operation provided some filter expression.

* **Parameters:**
  * **filter_expression** (*Optional* *[* *Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *]*) – The filter expression to
    query with. Defaults to None.
  * **params** (*Optional* *[* *Dict* *[* *str* *,* *Any* *]* *]* *,* *optional*) – The parameters for the query. Defaults to None.
  * **dialect** (*int*)
* **Raises:**
  **TypeError** – If filter_expression is not of type redisvl.query.FilterExpression

```python
from redisvl.query import CountQuery
from redisvl.query.filter import Tag

t = Tag("brand") == "Nike"
query = CountQuery(filter_expression=t)

count = index.query(query)
```

#### `dialect(dialect)`

Add a dialect field to the query.

- **dialect** - dialect version to execute the query under

* **Parameters:**
  **dialect** (*int*)
* **Return type:**
  *Query*

#### `expander(expander)`

Add an expander field to the query.

- **expander** - the name of the expander

* **Parameters:**
  **expander** (*str*)
* **Return type:**
  *Query*

#### `in_order()`

Match only documents where the query terms appear in
the same order in the document.
i.e., for the query "hello world", we do not match "world hello"

* **Return type:**
  *Query*

#### `language(language)`

Analyze the query as being in the specified language.

* **Parameters:**
  **language** (*str*) – The language (e.g. chinese or english)
* **Return type:**
  *Query*

#### `limit_fields(*fields)`

Limit the search to specific TEXT fields only.

- **fields**: Each element should be a string, case sensitive field name

from the defined schema.

* **Parameters:**
  **fields** (*str*)
* **Return type:**
  *Query*

#### `limit_ids(*ids)`

Limit the results to a specific set of pre-known document
ids of any length.

* **Return type:**
  *Query*

#### `no_content()`

Set the query to only return ids and not the document content.

* **Return type:**
  *Query*

#### `no_stopwords()`

Prevent the query from being filtered for stopwords.
Only useful in very big queries that you are certain contain
no stopwords.

* **Return type:**
  *Query*

#### `paging(offset, num)`

Set the paging for the query (defaults to 0..10).

- **offset**: Paging offset for the results. Defaults to 0
- **num**: How many results do we want

* **Parameters:**
  * **offset** (*int*)
  * **num** (*int*)
* **Return type:**
  *Query*

#### `query_string()`

Return the query string of this query only.

* **Return type:**
  str

#### `return_fields(*fields, skip_decode=None)`

Set the fields to return with search results.

* **Parameters:**
  * **\*fields** – Variable number of field names to return.
  * **skip_decode** (*str* *|* *list* *[* *str* *]*  *|* *None*) – Optional field name or list of field names that should not be
    decoded. Useful for binary data like embeddings.
* **Returns:**
  Returns the query object for method chaining.
* **Return type:**
  self
* **Raises:**
  **TypeError** – If skip_decode is not a string, list, or None.

#### `scorer(scorer)`

Use a different scoring function to evaluate document relevance.
Default is TFIDF.

Since Redis 8.0 default was changed to BM25STD.

* **Parameters:**
  **scorer** (*str*) – The scoring function to use
  (e.g. TFIDF.DOCNORM or BM25)
* **Return type:**
  *Query*

#### `set_filter(filter_expression=None)`

Set the filter expression for the query.

* **Parameters:**
  **filter_expression** (*Optional* *[* *Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *]* *,* *optional*) – The filter
  expression or query string to use on the query.
* **Raises:**
  **TypeError** – If filter_expression is not a valid FilterExpression or string.

#### `slop(slop)`

Allow a maximum of N intervening non-matched terms between
phrase terms (0 means exact phrase).

* **Parameters:**
  **slop** (*int*)
* **Return type:**
  *Query*

#### `sort_by(sort_spec=None, asc=True)`

Set the sort order for query results.

This method supports sorting by single or multiple fields. Note that Redis Search
natively supports only a single SORTBY field. When multiple fields are specified,
only the FIRST field is used for the Redis SORTBY clause.

* **Parameters:**
  * **sort_spec** (*str* *|* *tuple* *[* *str* *,* *str* *]*  *|* *list* *[* *str* *|* *tuple* *[* *str* *,* *str* *]* *]*  *|* *None*) – Sort specification in various formats:
    - str: single field name
    - Tuple[str, str]: (field_name, "ASC"|"DESC")
    - List: list of field names or tuples
  * **asc** (*bool*) – Default sort direction when not specified (only used when sort_spec is a string).
    Defaults to True (ascending).
* **Returns:**
  Returns the query object for method chaining.
* **Return type:**
  self
* **Raises:**
  * **TypeError** – If sort_spec is not a valid type.
  * **ValueError** – If direction is not "ASC" or "DESC".

### `Examples`

```pycon
>> query.sort_by("price")  # Single field, ascending
>> query.sort_by(("price", "DESC"))  # Single field, descending
>> query.sort_by(["price", "rating"])  # Multiple fields (only first used)
>> query.sort_by([("price", "DESC"), ("rating", "ASC")])
```

{{< note >}}
When multiple fields are specified, only the first field is used for sorting
in Redis. Future versions may support multi-field sorting through post-query
sorting in Python.
{{< /note >}}

#### `timeout(timeout)`

overrides the timeout parameter of the module

* **Parameters:**
  **timeout** (*float*)
* **Return type:**
  *Query*

#### `verbatim()`

Set the query to be verbatim, i.e., use no query expansion
or stemming.

* **Return type:**
  *Query*

#### `with_payloads()`

Ask the engine to return document payloads.

* **Return type:**
  *Query*

#### `with_scores()`

Ask the engine to return document search scores.

* **Return type:**
  *Query*

#### `property filter: str | `[`FilterExpression`]({{< relref "filter/#filterexpression" >}})` `

The filter expression for the query.

#### `property params: dict[str, Any]`

Return the query parameters.

#### `property query: BaseQuery`

Return self as the query object.

## MultiVectorQuery

### `class MultiVectorQuery(vectors, return_fields=None, filter_expression=None, num_results=10, dialect=2)`

Bases: `AggregationQuery`

MultiVectorQuery allows for search over multiple vector fields in a document simultaneously.
The final score will be a weighted combination of the individual vector similarity scores
following the formula:

score = (w_1 \* score_1 + w_2 \* score_2 + w_3 \* score_3 + … )

Vectors may be of different size and datatype, but must be indexed using the ‘cosine’ distance_metric.

```python
from redisvl.query import MultiVectorQuery, Vector
from redisvl.index import SearchIndex

index = SearchIndex.from_yaml("path/to/index.yaml")

vector_1 = Vector(
    vector=[0.1, 0.2, 0.3],
    field_name="text_vector",
    dtype="float32",
    weight=0.7,
)
vector_2 = Vector(
    vector=[0.5, 0.5],
    field_name="image_vector",
    dtype="bfloat16",
    weight=0.2,
)
vector_3 = Vector(
    vector=[0.1, 0.2, 0.3],
    field_name="text_vector",
    dtype="float64",
    weight=0.5,
)

query = MultiVectorQuery(
    vectors=[vector_1, vector_2, vector_3],
    filter_expression=None,
    num_results=10,
    return_fields=["field1", "field2"],
    dialect=2,
)

results = index.query(query)
```

Instantiates a MultiVectorQuery object.

* **Parameters:**
  * **vectors** (*Union* *[*[*Vector*]({{< relref "vector/#vector" >}}) *,* *List* *[*[*Vector*]({{< relref "vector/#vector" >}}) *]* *]*) – The Vectors to perform vector similarity search.
  * **return_fields** (*Optional* *[* *List* *[* *str* *]* *]* *,* *optional*) – The fields to return. Defaults to None.
  * **filter_expression** (*Optional* *[* *Union* *[* *str* *,* [*FilterExpression*]({{< relref "filter/#filterexpression" >}}) *]* *]*) – The filter expression to use.
    Defaults to None.
  * **num_results** (*int* *,* *optional*) – The number of results to return. Defaults to 10.
  * **dialect** (*int* *,* *optional*) – The Redis dialect version. Defaults to 2.

#### `add_scores()`

If set, includes the score as an ordinary field of the row.

* **Return type:**
  *AggregateRequest*

#### `apply(**kwexpr)`

Specify one or more projection expressions to add to each result

### `Parameters`

- **kwexpr**: One or more key-value pairs for a projection. The key is
  : the alias for the projection, and the value is the projection
    expression itself, for example apply(square_root="sqrt(@foo)")

* **Return type:**
  *AggregateRequest*

#### `dialect(dialect)`

Add a dialect field to the aggregate command.

- **dialect** - dialect version to execute the query under

* **Parameters:**
  **dialect** (*int*)
* **Return type:**
  *AggregateRequest*

#### `filter(expressions)`

Specify filter for post-query results using predicates relating to
values in the result set.

### `Parameters`

- **fields**: Fields to group by. This can either be a single string,
  : or a list of strings.

* **Parameters:**
  **expressions** (*str* *|* *List* *[* *str* *]*)
* **Return type:**
  *AggregateRequest*

#### `group_by(fields, *reducers)`

Specify by which fields to group the aggregation.

### `Parameters`

- **fields**: Fields to group by. This can either be a single string,
  : or a list of strings. both cases, the field should be specified as
    @field.
- **reducers**: One or more reducers. Reducers may be found in the
  : aggregation module.

* **Parameters:**
  * **fields** (*str* *|* *List* *[* *str* *]*)
  * **reducers** (*Reducer*)
* **Return type:**
  *AggregateRequest*

#### `limit(offset, num)`

Sets the limit for the most recent group or query.

If no group has been defined yet (via group_by()) then this sets
the limit for the initial pool of results from the query. Otherwise,
this limits the number of items operated on from the previous group.

Setting a limit on the initial search results may be useful when
attempting to execute an aggregation on a sample of a large data set.

### `Parameters`

- **offset**: Result offset from which to begin paging
- **num**: Number of results to return

Example of sorting the initial results:

``
AggregateRequest("@sale_amount:[10000, inf]")            .limit(0, 10)            .group_by("@state", r.count())
``

Will only group by the states found in the first 10 results of the
query @sale_amount:[10000, inf]. On the other hand,

``
AggregateRequest("@sale_amount:[10000, inf]")            .limit(0, 1000)            .group_by("@state", r.count()            .limit(0, 10)
``

Will group all the results matching the query, but only return the
first 10 groups.

If you only wish to return a *top-N* style query, consider using
sort_by() instead.

* **Parameters:**
  * **offset** (*int*)
  * **num** (*int*)
* **Return type:**
  *AggregateRequest*

#### `load(*fields)`

Indicate the fields to be returned in the response. These fields are
returned in addition to any others implicitly specified.

### `Parameters`

- **fields**: If fields not specified, all the fields will be loaded.

Otherwise, fields should be given in the format of @field.

* **Parameters:**
  **fields** (*str*)
* **Return type:**
  *AggregateRequest*

#### `scorer(scorer)`

Use a different scoring function to evaluate document relevance.
Default is TFIDF.

* **Parameters:**
  **scorer** (*str*) – The scoring function to use
  (e.g. TFIDF.DOCNORM or BM25)
* **Return type:**
  *AggregateRequest*

#### `sort_by(*fields, **kwargs)`

Indicate how the results should be sorted. This can also be used for
*top-N* style queries

### `Parameters`

- **fields**: The fields by which to sort. This can be either a single
  : field or a list of fields. If you wish to specify order, you can
    use the Asc or Desc wrapper classes.
- **max**: Maximum number of results to return. This can be
  : used instead of LIMIT and is also faster.

Example of sorting by foo ascending and bar descending:

``
sort_by(Asc("@foo"), Desc("@bar"))
``

Return the top 10 customers:

``
AggregateRequest()            .group_by("@customer", r.sum("@paid").alias(FIELDNAME))            .sort_by(Desc("@paid"), max=10)
``

* **Parameters:**
  **fields** (*str*)
* **Return type:**
  *AggregateRequest*

#### `with_schema()`

If set, the schema property will contain a list of [field, type]
entries in the result object.

* **Return type:**
  *AggregateRequest*

#### `property params: dict[str, Any]`

Return the parameters for the aggregation.

* **Returns:**
  The parameters for the aggregation.
* **Return type:**
  Dict[str, Any]

## SQLQuery

### `class SQLQuery(sql, params=None, *, sql_redis_options=None)`

Bases: `object`

A query class that translates SQL-like syntax into Redis queries.

This class allows users to write SQL SELECT statements that are
automatically translated into Redis FT.SEARCH or FT.AGGREGATE commands.

For TEXT fields with `sql-redis >= 0.4.0`:

- `=` performs exact phrase or exact-term matching
- `LIKE` performs wildcard/pattern matching using SQL `%` wildcards
- `fuzzy(field, 'term')` performs typo-tolerant matching
- `fulltext(field, 'query')` performs tokenized text search

Vector and hybrid search:

- `vector_distance(field, :vec)` / `cosine_distance(field, :vec)` perform
  KNN vector similarity search (pass the query vector via `params`)
- `hybrid_vector_search(cosine_distance(field, :vec), fulltext(field, 'query'), rrf())` fuses a text and a vector query server-side via Redis `FT.HYBRID`
  (requires `sql-redis >= 0.7.0`, Redis 8.4+, and redis-py >= 7.1.0). Use
  `rrf()` or `linear()` to select the fusion method

```python
from redisvl.query import SQLQuery
from redisvl.index import SearchIndex

index = SearchIndex.from_existing("products", redis_url="redis://localhost:6379")

sql_query = SQLQuery('''
    SELECT title, price, category
    FROM products
    WHERE category = 'electronics' AND price < 100
''')

results = index.query(sql_query)
```

{{< note >}}
Requires the optional sql-redis package. Install with:
`pip install redisvl[sql-redis]`
{{< /note >}}

Initialize a SQLQuery.

* **Parameters:**
  * **sql** (*str*) – The SQL SELECT statement to execute.
  * **params** (*dict* *[* *str* *,* *Any* *]*  *|* *None*) – Optional dictionary of parameters for parameterized queries.
    Useful for passing vector data for similarity searches.
  * **sql_redis_options** (*dict* *[* *str* *,* *Any* *]*  *|* *None*) – Optional passthrough options forwarded to
    `sql-redis` executor creation. Use this to tune how SQL
    query translation loads and caches index schema metadata.
    For example, `{"schema_cache_strategy": "lazy"}` loads
    schemas on demand (the RedisVL default), while
    `{"schema_cache_strategy": "load_all"}` eagerly loads
    all schemas up front. These options exist to balance startup
    cost vs repeated-query performance across many indexes.

{{< note >}}
`sql-redis >= 0.4.0` uses explicit TEXT search operators.
Use `=` for exact phrase matching, `LIKE` for wildcard
matching, `fuzzy()` for typo-tolerant matching, and
`fulltext()` for tokenized search.
{{< /note >}}

#### `redis_query_string(redis_client=None, redis_url='redis://localhost:6379')`

Translate the SQL query to a Redis command string.

This method uses the sql-redis translator to convert the SQL statement
into the equivalent Redis FT.SEARCH or FT.AGGREGATE command.

* **Parameters:**
  * **redis_client** (*Any* *|* *None*) – A Redis client connection used to load index schemas.
    If not provided, a connection will be created using redis_url.
  * **redis_url** (*str*) – The Redis URL to connect to if redis_client is not provided.
    Defaults to "redis://localhost:6379".
* **Returns:**
  {electronics}"’).
* **Return type:**
  The Redis command string (e.g., ‘FT.SEARCH products "@category
* **Raises:**
  **ImportError** – If sql-redis package is not installed.

### `Example`

```python
from redisvl.query import SQLQuery

sql_query = SQLQuery("SELECT * FROM products WHERE category = 'electronics'")

# Using redis_url
redis_cmd = sql_query.redis_query_string(redis_url="redis://localhost:6379")

# Or using an existing client
from redis import Redis
client = Redis()
redis_cmd = sql_query.redis_query_string(redis_client=client)

print(redis_cmd)
# Output: FT.SEARCH products "@category:{electronics}"
```

{{< note >}}
SQLQuery requires the optional `sql-redis` package. Install with:
`pip install redisvl[sql-redis]`
{{< /note >}}

{{< note >}}
SQLQuery translates SQL SELECT statements into Redis FT.SEARCH or FT.AGGREGATE commands.
The SQL syntax supports WHERE clauses, field selection, ordering, and parameterized queries
for vector similarity searches.
{{< /note >}}

{{< note >}}
SQLQuery accepts a `sql_redis_options` dictionary that is passed through to
`sql-redis` executor creation. The most common option is
`schema_cache_strategy`:

- `"lazy"` (default) loads schemas on demand, which keeps one-off or
  narrow queries cheaper.
- `"load_all"` eagerly loads all schemas up front, which can help when
  running many SQL queries across many indexes.
{{< /note >}}

{{< note >}}
SQLQuery supports hybrid search via `hybrid_vector_search(cosine_distance(...), fulltext(...), rrf())`, which translates to a native Redis `FT.HYBRID` command
fusing a text and a vector query server-side. This is the SQL front-end to
`HybridQuery` and requires `sql-redis >= 0.7.0`, Redis 8.4+, and
redis-py >= 7.1.0.
{{< /note >}}
